fixed scrollbar not scrolling with fixed header

--- a/src/styles/_search.scss
+++ b/src/styles/_search.scss
@@ -20,13 +20,19 @@
     z-index: 90;
     width: inherit;
     opacity: 1;
+    height: 95vh;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    width: 100vw;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
     .search-result {
-      width: 100vw;
       display: flex;
       align-items: center;
       background-color: #1f1f1f;
       padding: 10px 10px;
       border-top: 1px solid #979797;
+
       &:hover {
         background-color: #5f5f5f;
       }
@@ -72,10 +78,12 @@
 @media (min-width: $desktop) {
   .search-container {
     .search-results {
-      left: 20%;
-      .search-result {
-        width: 60vw;
-      }
+      width: 100%;
+      height: 70vh;
+      // width: 80%;
+      // left: 0;
+      // right: 0;
+      // margin: 0 auto;
     }
   }
 }
